--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@
     <title>Full Stack Portfolio</title>
   </head>
   <body>
+    <div class="container">
+      <main>
+        <h1 class="title">Say Hello!</h1>
 
+        <div class="name">
+          <label for="name">Your Name</label><br>
+          <input type="text" name="name" id="name" placeholder="Enter your name">
+        </div>
+
+        <div class="email">
+          <label for="email">Email</label> <br>
+          <input type="text" name="email" id="email" placeholder="Enter your email">
+        </div>
+
+        <div class="service">
+          <label for="services-needed">Needed Services</label> <br>
+          <select name="services" id="services-needed">
+            <option value="0">Choose Services</option>
+            <option value="car">Car wash</option>
+            <option value="house">House cleaning</option>
+          </select>
+        </div>
+
+        <div class="budget-select">
+          <label for="budget">Budget</label><br>
+          <select name="budget" id="budget" placeholder="Select Budget">
+            <option value="0">Select Budget</option>
+            <option value="100">£100</option>
+            <option value="500">£500</option>
+          </select>
+          <i class="fa-solid fa-sort"></i>
+        </div>
+
+        <div class="message">
+          <label for="message">Message</label><br>
+          <textarea name="message" id="message" cols="35" rows="7" placeholder="Your message here..."></textarea>
+        </div>
+
+        <div class="submit">
+          <button>Submit &#8594</button>
+        </div>
+      </main>
+    </div>
+    
   </body>
 </html>
